--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   rxdart: ^0.27.0
   like_button: ^2.1.0
 
+  video_player: ^2.8.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
