--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   like_button: ^2.1.0
 
   video_player: ^2.8.2
+  video_thumbnail: ^0.5.3
+  path_provider: ^2.1.1
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
